fix: tree out of bounds and response data uuid
