# api.yml
@@ -17,6 +17,28 @@ info:
 servers:
   - url: http://localhost
 paths:
+  /hello:
+    get:
+      summary: This is just a test endpoint to get you started.
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Test return
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HelloResponse"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /estate:
     post:
       summary: Create a new estate
@@ -158,11 +180,19 @@ components:
           type: integer
     UuidResponse:
       required:
-        - uuid
+        - id
       type: object
       properties:
-        uuid:
+        id:
           type: string
+    HelloResponse:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          example: Hello, World!
     ErrorResponse:
       type: object
       required:
